--- a/styles/stylemain.css
+++ b/styles/stylemain.css
@@ -29,6 +29,8 @@ body{
    /*  border-bottom: 1px solid white; */
 }
 
+/*-*/
+
 .header-from{
     display: flex;
     justify-content: space-around;
@@ -60,9 +62,10 @@ body{
 .container-page-main{
     display: grid;
     width: auto;
-    grid-template-columns: 260px minmax(20vw, max-content);
+    grid-template-columns: 260px minmax(20vw, 70vw);
     grid-template-rows: auto;
     color: aliceblue;
+    gap: 20px;
 
     margin-top: 100px;
     background: rgb(42,27,54);
@@ -91,7 +94,8 @@ body{
     margin-top: 60px;
     
     /* padding-left: 10px; */
-    padding-right: 20px;  
+    padding-right: 20px;
+      
 }
 
 
@@ -187,4 +191,13 @@ min-width: 270px;
     line-height: 25px;
     margin-top: 40px;
     margin-bottom: 10px;
+}
+
+.resaltar{
+    color: rgb(169, 79, 40);
+    font-size: 1rem;
+    font-weight: bold;
+    letter-spacing: 0.8px;
+    word-spacing: 1px;
+    line-height: 30px;
 }
