--- a/styles/stylemain.css
+++ b/styles/stylemain.css
@@ -1,32 +1,28 @@
+:root{
+    --color-letter:rgb(255, 255, 255);
+    --color-header:rgb(98, 70, 235);
+    --backgroun-main: rgb(255, 255, 255);
+    --article-main: rgb(49, 44, 44);
+    --title-h1: rgb(255, 255, 255);
+}
+
 body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
     height: 100%;
     box-sizing: border-box;
-    color: white;
-
-   /*  background: rgb(2,0,36); 
-    background-color: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(43,80,138,1) 25%, rgba(88,52,154,1) 41%, rgba(52,111,154,1) 63%, rgba(52,76,154,1) 91%, rgba(52,76,154,1) 91%); */
-
-    /* background: rgb(42,27,54);
-    background: radial-gradient(circle, rgba(42,27,54,1) 100%, rgba(88,21,113,0.695098107602416) 100%);  */
-
+    color: var(--color-letter);
 }
 
 .header-main{
     position: fixed;
-    /* display: block; */
-    color: aliceblue;
     width: 100vw;
     height: 100px;
    top: 0;
-
      z-index: 100; 
-
-    background: rgb(79, 61, 96);
-
-   /*  border-bottom: 1px solid white; */
+    background: var(--color-header);
+    border-bottom: 1px solid gray;
 }
 
 /*-*/
@@ -37,7 +33,6 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* height: 40px; */
     margin-top: 20px; 
     
 }
@@ -46,17 +41,10 @@ body{
     position: relative;
     display: flex;
     align-items: center;
-    color: aliceblue;
     list-style-type: none;
-   
     gap: 30px;
     justify-content: center;
-    
 }
-
-
-
-
 
 
 
@@ -64,44 +52,27 @@ body{
 .container-page-main{
     display: grid;
     width: auto;
-    grid-template-columns: 260px minmax(20vw, 70vw);
+    grid-template-columns: 260px minmax(20vw, 80vw);
     grid-template-rows: auto;
-    color: aliceblue;
     gap: 20px;
-
     margin-top: 100px;
-    background: rgb(42,27,54);
-    background: radial-gradient(circle, rgba(42,27,54,1) 100%, rgba(88,21,113,0.695098107602416) 100%);
-    
+    background: var(--backgroun-main);
 }
 
 
 .aside-left{
     position:fixed;
-     width: 250px; 
-    color: aliceblue;
+    width: 250px; 
     overflow: auto;
     height: 90vh;
     padding-top: 50px; 
     grid-column: 1/2;
-
-    
+    border-right: 1px solid gray;
+    background-color: var(--article-main);
 }
 
-/* .container-aside-left{
-    background-color: rgb(39, 37, 46);
-
-    padding-bottom: 300px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    
-} 
-*/
 
 .container-top{
-    background-color: rgb(56, 30, 142);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     height: 50px;
@@ -115,7 +86,6 @@ body{
 .ul-aside-left{
     list-style-type: none;
     text-decoration: none;
-    color: aliceblue;
     padding-left: 17px;
 }
 
@@ -129,37 +99,42 @@ body{
 }
 
 .li-left > a{
-    color: aliceblue;
+    /* color: aliceblue; */
     list-style-type: none;
     text-decoration: none;
-    
 }
 
 
 .summary-left{
     list-style-type: none;
     text-decoration: none;
-    color: rgb(209, 219, 227);
-    border: 1px solid white;
     padding: 10px;
 }
 
 .summary-class{
     list-style-type: none;
     text-decoration: none;
-    color: aliceblue;
 }
 
 
 .container-main{
-    
     grid-column: 2/3;
-    margin-top: 60px;
+    margin-top: 60px;   
+}
+
+.container-article-main{
     
-    /* padding-left: 10px; */
-    padding-right: 20px;
-    padding-left: 5vw;
-      
+    border: 1px solid gray;
+ 
+    /* margin-top: 10px; */
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.article-main{
+    background-color: var(--article-main);
+    padding: 40px;
+    margin: 10px;
 }
 
 
@@ -173,12 +148,16 @@ body{
     .container-page-main{
         display: grid;
      /* width: 100vw; */
-        grid-template-columns: 90vw;
+        grid-template-columns: 95vw;
         grid-template-rows: auto; 
         justify-content: center;
     }
+
+   
+
+
     .container-main{
-        width: 90vw;
+        width: 95vw;
         grid-column: 1/2;
         padding-left: 0;
     padding-right: 0;
@@ -192,8 +171,9 @@ body{
 .title-course{
     text-align: center;
     margin-top: 50px;
-   /*  color: #239aff; */
-    font-size: 3rem;
+    color: var(--title-h1); 
+    font-size: 4rem;
+    font-weight: bold;
 }
 
 .title-h2{
@@ -202,20 +182,17 @@ body{
     letter-spacing: 2px;
     padding-bottom: 10px;
     border-bottom: 3px solid gray;
+    transition: 0.5s;
     
 }
 
-
-
-.container-footer-main{
-    display: flex;
-    justify-content: space-around;
-    
-
+.title-h2:hover{
+    background-color: rgb(242, 229, 229);
 }
+
 
 /* .item-footer-main{
-border: 1px solid black;
+    border: 1px solid black;
 } */
 
 /*barra right*/
@@ -236,8 +213,8 @@ footer{
 
 .code-only{
    
-   
-min-width: 270px;
+    
+    min-width: 270px;
     max-width: 1000px;
 }
 
@@ -275,7 +252,7 @@ min-width: 270px;
 }
 
 .ul-parrafos{
-   font-size: 1.5rem;
+    font-size: 1.5rem;
     letter-spacing: 0.8px;
     word-spacing: 1px;
     line-height: 30px; 
@@ -283,7 +260,7 @@ min-width: 270px;
 }
 
 .li-parrafos{
-   font-size: 1.5rem;
+    font-size: 1.5rem;
     letter-spacing: 0.8px;
     word-spacing: 1px;
     line-height: 30px;
@@ -305,22 +282,39 @@ clases para el menu de lado izquierdo
 }
 
 .add-container-main{
-    width: 90vw;
+    width: 95vw;
+    margin-top: 60px;
     grid-column: 1/2;
     padding-left: 0;
-padding-right: 0
+    padding-right: 0
 }
 
 
 .add-container-page-main{
     display: grid;
- /* width: 100vw; */
-    grid-template-columns: 90vw;
+    /* width: 100vw; */
+    gap: 20px;
+    grid-template-columns: 95vw;
     grid-template-rows: auto; 
     justify-content: center;
     margin-top: 100px;
-    background: rgb(42,27,54);
-    background: radial-gradient(circle, rgba(42,27,54,1) 100%, rgba(88,21,113,0.695098107602416) 100%);
+    background: var(--backgroun-main);
 }
 
 /************************************/
+
+/* div li{
+    background-color: blue;
+} */
+
+
+.container-footer-main{
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-around;
+    color: var(--article-main);
+    background-color: var(--backgroun-main);
+    border: 1px solid gray;
+    
+
+}
