--- a/styles/stylemain.css
+++ b/styles/stylemain.css
@@ -1,9 +1,10 @@
 :root{
     --color-letter:rgb(255, 255, 255);
     --color-header:rgb(98, 70, 235);
-    --backgroun-main: rgb(255, 255, 255);
-    --article-main: rgb(49, 44, 44);
+    --backgroun-main: rgb(0, 0, 0);
+    --article-main: rgb(82, 74, 74);
     --title-h1: rgb(255, 255, 255);
+    --span-resaltar: #f92672;
 }
 
 body{
@@ -52,11 +53,12 @@ body{
 .container-page-main{
     display: grid;
     width: auto;
-    grid-template-columns: 260px minmax(20vw, 80vw);
+    grid-template-columns: 260px minmax(20%, 95%);
     grid-template-rows: auto;
-    gap: 20px;
     margin-top: 100px;
     background: var(--backgroun-main);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -67,7 +69,6 @@ body{
     height: 90vh;
     padding-top: 50px; 
     grid-column: 1/2;
-    border-right: 1px solid gray;
     background-color: var(--article-main);
 }
 
@@ -119,12 +120,15 @@ body{
 
 .container-main{
     grid-column: 2/3;
-    margin-top: 60px;   
+    margin-top: 60px;
+    width: 100%; 
+    margin-left: auto;
+    margin-right: auto;  
 }
 
 .container-article-main{
     
-    border: 1px solid gray;
+   /*  border: 1px solid gray; */
  
     /* margin-top: 10px; */
     margin-left: auto;
@@ -243,7 +247,7 @@ footer{
 }
 
 .resaltar{
-    color: rgb(218, 57, 92);
+    color: var(--span-resaltar);
     font-size: 1.5rem;
     font-weight: bold;
     letter-spacing: 0.8px;
@@ -281,25 +285,31 @@ clases para el menu de lado izquierdo
     display: none;
 }
 
+.add-container-page-main{
+    display: grid;
+    /* width: 100vw; */
+    
+    grid-template-columns: 95vw;
+    grid-template-rows: auto; 
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    background: var(--backgroun-main);
+    margin-left: auto;
+    margin-right: auto
+}
+
 .add-container-main{
     width: 95vw;
     margin-top: 60px;
     grid-column: 1/2;
     padding-left: 0;
-    padding-right: 0
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
-.add-container-page-main{
-    display: grid;
-    /* width: 100vw; */
-    gap: 20px;
-    grid-template-columns: 95vw;
-    grid-template-rows: auto; 
-    justify-content: center;
-    margin-top: 100px;
-    background: var(--backgroun-main);
-}
 
 /************************************/
 
@@ -309,12 +319,14 @@ clases para el menu de lado izquierdo
 
 
 .container-footer-main{
-    margin-top: 10px;
+    
     display: flex;
     justify-content: space-around;
-    color: var(--article-main);
-    background-color: var(--backgroun-main);
-    border: 1px solid gray;
+    color: var(--color-letter);
+    background-color: gray;
+    /* border: 1px solid gray */;
+    padding: 40px;
+    margin: 10px;
     
 
 }
