--- a/styles/stylemain.css
+++ b/styles/stylemain.css
@@ -6,7 +6,7 @@
 
     --article-main-2:grey;
     --title-h1: rgb(255, 255, 255);
-    --span-resaltar: #f92672;
+    --span-resaltar: #8c3918;
 }
 
 body{
@@ -82,42 +82,34 @@ body{
 }
 
 .ul-level-1{
-    padding-left: 17px;
-    list-style-type: none;
-}
-
-.ul-aside-left{
+    padding: 1px;
     list-style-type: none;
     text-decoration: none;
-    padding-left: 17px;
+    list-style-position: inside;
 }
 
-.ul-aside-left > li{
-   margin: 20px;
 
-}
-
-.ul-aside-left > li:hover{
-    background-color: rgb(58, 54, 52);
-}
-
-.li-left > a{
+.ul-level-1 a[href]{
     /* color: aliceblue; */
     list-style-type: none;
     text-decoration: none;
+    text-decoration-line: none ;
+    color: white;
 }
-
 
 .summary-left{
     list-style-type: none;
     text-decoration: none;
     padding: 10px;
+   /*  background-color: rgb(39, 45, 45); */
+    margin: 5px 0;
+}
+.summary-left:hover{
+    background-color: #241218;
+
 }
 
-.summary-class{
-    list-style-type: none;
-    text-decoration: none;
-}
+
 
 
 .container-main{
@@ -178,8 +170,9 @@ body{
 
 .title-course{
     text-align: center;
+    color: var(--span-resaltar);
     margin-top: 50px;
-    color: var(--title-h1); 
+    /* color: var(--title-h1);  */
     font-size: 4rem;
     font-weight: bold;
 }
